--- a/src/components/home/style.scss
+++ b/src/components/home/style.scss
@@ -12,8 +12,12 @@ $base-color: #909a7f;
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  padding-bottom: 100px;
+
+  padding-bottom: -50px;
   justify-content: center;
+}
+.user {
+  padding-top: 30px !important;
 }
 
 .containerValores {
@@ -26,11 +30,11 @@ $base-color: #909a7f;
 }
 
 .containerAbout {
-  padding-top: 70px;
+  padding-top: 20px;
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-
+  margin-bottom: 70px;
   justify-content: center;
 }
 .containerContact {
@@ -38,30 +42,113 @@ $base-color: #909a7f;
   display: flex;
   flex-wrap: wrap;
   background-color: #f6f8fc;
-  padding-left: 10%;
   justify-content: center;
 }
 
 .home {
-  padding-top: 50px;
   width: 100%;
   max-width: calc(100% - 30%);
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
+}
+.home-fisrt {
+  padding-top: 50px;
+}
+.home-second {
+  justify-content: space-around;
+  margin-top: -50px;
 }
 
 .home-title {
   color: $base-color;
-  font-size: 3.4rem;
+  font-size: 7.6vw;
+
   font-weight: 600;
   margin-top: 0;
+  margin-bottom: 50px;
+  width: 100%;
+}
+@media screen and (min-width: 680px) {
+  .home-title {
+    color: $base-color;
+
+    font-size: 2.6em;
+    font-weight: 600;
+    margin-top: 0;
+    margin-bottom: 50px;
+    width: 100%;
+  }
+}
+
+.home-name-italic {
+  font-size: 1.4vw;
+  font-style: italic;
+  margin-bottom: 40%;
+  margin-left: 10%;
+  color: white;
+}
+.home-name {
+  font-size: 3.3vw;
+  font-style: italic;
+  margin-top: -42%;
+  margin-left: 10%;
+  color: white;
+}
+
+@media screen and (max-width: 700px) {
+  .home-name-italic {
+    font-size: 1em;
+    font-style: italic;
+    margin-bottom: 40%;
+    margin-left: 10%;
+    color: white;
+  }
+  .home-name {
+    font-size: 2em;
+    font-style: italic;
+    margin-top: -48%;
+    margin-left: 12%;
+    color: white;
+  }
+}
+@media screen and (max-width: 580px) {
+  .home-name-italic {
+    font-size: 0vw;
+    font-style: italic;
+    margin-bottom: 40%;
+    margin-left: 12%;
+    color: white;
+  }
+  .home-name {
+    font-size: 1.6em;
+    font-style: italic;
+    margin-top: -42%;
+    margin-left: 10%;
+    color: white;
+  }
 }
 
 .home-secondary-title {
   color: #555555;
   font-size: 1.4rem;
   line-height: 35px;
+  font-weight: 400;
+  margin-bottom: 50px;
+}
+
+.home-title-modal {
+  color: $base-color;
+  font-size: 1.8rem;
+  font-weight: 600;
+  margin-top: 0;
+  margin-bottom: 50px;
+  width: 100%;
+}
+
+.home-secondary-title-modal {
+  color: #555555;
+  font-size: 1.3rem;
   font-weight: 400;
   margin-bottom: 50px;
 }
@@ -74,10 +161,9 @@ $base-color: #909a7f;
 .logoLoto {
   position: absolute;
   position: absolute;
-  height: 140px;
-  width: 140px;
-  top: -30px;
-  margin-left: -40px;
+  top: -125px;
+  left: 0px;
+  margin-left: -10%;
 }
 
 /* Create two unequal columns that sits next to each other */
@@ -93,9 +179,10 @@ $base-color: #909a7f;
 
 /* Main column */
 .main {
+  max-width: 500px;
   flex: 10%;
-  padding: 5%;
-  margin-bottom: 100px;
+  margin-bottom: 5%;
+  padding-top: 0%;
 }
 
 @import "https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300";
@@ -113,6 +200,11 @@ div[class*="box"] {
   width: 250px;
   cursor: pointer;
 }
+
+.cursor {
+  cursor: pointer;
+}
+
 .text-btn {
   color: $base-color;
 }
@@ -152,4 +244,50 @@ div[class*="box"] {
 .btn-three:hover::after {
   opacity: 1;
   transform: scale(1, 1);
+}
+
+.modal {
+  pointer-events: none;
+  opacity: 0;
+  transition: opacity 0.3s;
+  position: absolute;
+  top: 10px;
+  left: 0;
+  right: 0;
+  max-width: 700px;
+
+  margin: 0 auto;
+  padding: 30px;
+  background: #fff;
+  border-radius: 4px;
+  margin-top: 20%;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);
+}
+
+.modal-close-btn {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  font-size: 20px;
+}
+
+/** Overlay */
+.overlay {
+  pointer-events: none;
+  opacity: 0;
+  transition: opacity 0.3s;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+/** JS */
+.is-visible {
+  opacity: 1;
+  pointer-events: auto;
 }
